--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,13 @@
 * Browsers: last 4 version
 */
 
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: "Roboto";
@@ -79,8 +86,8 @@ img {
 }
 .site-main {
     -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
 }
 .wrapper {
     background-image: url(../images/herobg.png);
@@ -98,11 +105,11 @@ img {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
 }
 .site-nav {
     
@@ -112,11 +119,11 @@ img {
     display: -ms-flexbox;
     display: flex;
     -webkit-column-gap: 40px;
-       -moz-column-gap: 40px;
-            column-gap: 40px;
+    -moz-column-gap: 40px;
+    column-gap: 40px;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     margin-top: 0;
     margin-bottom: 0;
     padding-left: 0;
@@ -202,7 +209,6 @@ img {
     /* background-size: 2000px 1570px , 1400px 1739px; */
     background-repeat: no-repeat;
     background-position: calc(50% - 700px) calc(50% - 45px), calc(50% + 742px) calc(50% + 150px), calc(50% + 0px) calc(50% + 34px);
-    /* background-position: center , calc(50% + 0px) calc(50% + 34px); */
     
 }
 .collection__wrapper {
@@ -230,17 +236,17 @@ img {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -ms-flex-wrap: wrap-reverse;
-        flex-wrap: wrap-reverse;
+    flex-wrap: wrap-reverse;
     margin-left: 113px;
 }
 .collection__item:nth-child(2n) {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: reverse;
-        -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse;
     margin-right: 113px;
     margin-left: 0;
     
@@ -308,8 +314,8 @@ img {
     display: -ms-flexbox;
     display: flex;
     -webkit-column-gap: 20px;
-       -moz-column-gap: 20px;
-            column-gap: 20px;
+    -moz-column-gap: 20px;
+    column-gap: 20px;
     margin-top: 0;
     margin-bottom: 0;
     list-style: none;
@@ -367,8 +373,8 @@ img {
     display: -ms-flexbox;
     display: flex;
     -webkit-column-gap: 20px;
-       -moz-column-gap: 20px;
-            column-gap: 20px;
+    -moz-column-gap: 20px;
+    column-gap: 20px;
     margin-top: 0;
     margin-bottom: 60px;
     padding-left: 0;
@@ -431,11 +437,11 @@ img {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     padding-top: 65px;
     padding-bottom: 65px;
 }
@@ -444,8 +450,8 @@ img {
     display: -ms-flexbox;
     display: flex;
     -webkit-column-gap: 40px;
-       -moz-column-gap: 40px;
-            column-gap: 40px;
+    -moz-column-gap: 40px;
+    column-gap: 40px;
     margin-top: 0;
     margin-bottom: 0;
     padding-left: 0;
@@ -468,11 +474,11 @@ img {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-column-gap: 30px;
-       -moz-column-gap: 30px;
-            column-gap: 30px;
+    -moz-column-gap: 30px;
+    column-gap: 30px;
     margin-top: 0;
     margin-bottom: 0;
     padding-left: 0;
@@ -483,4 +489,42 @@ img {
 } */
 .footer__socials-link {
     text-decoration: none;
+}
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                -webkit-min-device-pixel-ratio: 2),
+only screen and (                -o-min-device-pixel-ratio: 2/1),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) 
+{ 
+    .wrapper {
+        background-image: url(../images/herobg@2x.png);    background-size: 1440px 800px;
+    }
+    .hero {
+        background-image:url(../images/heroabs@2x.png);
+        background-size: 710px 696px;
+        
+    }
+    .hero__title::before {
+        background-image: url(../images/heroab@2x.png);
+        background-size: contain;
+    }
+    .collection {
+        background-image: url(../images/collectionbarg1@2x.png),url(../images/collectionbarg2@2x.png),url(../images/collectionbg@2x.png);
+        background-size: contain, 550px 585px;
+        
+    }
+    .work {
+        background-image: url(../images/worksbg@2x.png);
+        background-size: contain;
+        
+    }
+    .site-footer {
+        background-image: url(../images/footerbg@2x.png);
+        background-size: contain;
+        
+    }
 }
